make web more usable

--- a/web/index.html
+++ b/web/index.html
@@ -92,9 +92,10 @@
     </div>
 
     <div id="map"></div>
+    <script type="text/javascript" src="prettyprint.js"></script>
     <script type="text/javascript" src="userdata.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWa0ZYeH6RBZnNTAIj30FyDIVnXV74D9o&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-tKAX_sYWJAJXB3QNM1cLV4MoAU_V91E&callback=initMap"
     async defer></script>
   </body>
 </html>
